# zeabus_software_ros1

./: .CMakeLists.txt.swp  .gitignore  README.md
hg_ros_3dm_gx4/: CMakeLists.txt  package.xml
hg_ros_3dm_gx4/launch/: imu_3dm_gx3_25.launch  imu_3dm_gx4_45.launch
hg_ros_3dm_gx4/script/: 99-microstrain.rules
hg_ros_3dm_gx4/src/: .3dm_gx4.cpp.swp  .3dm_gx4_test.cpp.swp  3dm_gx4.cpp  3dm_gx4_node.cpp  3dm_gx4_test.cpp
hg_ros_pololu/: CMakeLists.txt  package.xml
hg_ros_pololu/launch/: maestro8.launch
hg_ros_pololu/msg/: Pwm.msg
hg_ros_pololu/script/: 99-maestro.rules
hg_ros_pololu/src/: maestro.cpp  maestro_node.cpp
hg_ros_serial/: CMakeLists.txt  package.xml
hg_ros_serial/script/: 99-usb2serial.rules
hg_ros_serial/src/: serial.cpp  test.cpp
zeabus_condition/: CMakeLists.txt  package.xml
zeabus_condition/scripts/: LookUpPWM_2018.py  pure_thrust_mapper.py  read_pwm_force.py  thruster_mapper_condition.py
zeabus_control/: CMakeLists.txt  package.xml
zeabus_control/cfg/: offset_control.cfg  pid_.cfg  pid_control.cfg
zeabus_control/constant/: back_control.yaml  bound_ID_01.yaml  discrete_pid_set1.yaml  normal_pid_set_01.yaml  offset_01.yame  second_control.yaml  set_01.yaml  set_02.yaml
zeabus_control/msg/: ArrayFloat.msg  State.msg  Type2.msg
zeabus_control/python_src/: listen_odometry.py  main_control.py
zeabus_control/scripts/: LookUpPWM_2018.py  blue_robotics_2018.txt  blue_robotics_2018_boun.txt  blue_robotics_2018_bound.txt  blue_robotics_2018_bound_min.txt  controller_by_imu.py  linear_teledyne_2018.txt  plot_error.py  plot_state.py  pure_thrust_mapper.py  teledyne_2018_bound_min.txt  teledyne_9th_degree_bound_min.txt  thrust_mapper.py  thrust_mapper_NED.py  thrust_mapper_fix.py  thrust_mapper_ratio.py  thruster_mapper_condition.py
zeabus_control/src/: README.md  __init__.cpp  back_control.cpp  decision_part.cpp  dicision.cpp  discrete_pid.cpp  divide_to_robot_error.cpp  find_error_state.cpp  find_robot_error.cpp  find_robot_force.cpp  first_control.cpp  first_control_function.cpp  front_control.cpp  head_control.cpp  head_control.h  head_function.h  head_variable.h  listen_Odometry.cpp  listen_odometry.cpp  listen_twist.cpp  main_control.cpp  normal_pid.cpp  normal_pid_bound_i.cpp  offset_pid.cpp  other_function.cpp  other_function_double.cpp  second_control.cpp  second_control_function.cpp  service_check_state.cpp  service_control.cpp  service_get_target.cpp  service_one_point.cpp  service_two_point.cpp  sum_pid_bound_id.cpp  support_part.cpp  tune_part.cpp
zeabus_controller/: CMakeLists.txt  README.md  const_dump.yaml  contributors.txt  package.xml
zeabus_controller/action/: BarrelRoll.action
zeabus_controller/cfg/: OffSetConstant.cfg  PIDConstant.cfg  forcePIDConstant.cfg
zeabus_controller/constant/: PID_open_gazebo.yaml  back_ku.yaml  feedback_ku.yaml  force_SAUV.yaml  in_singapore.yaml  linear_ku.yaml  offset_ku.yaml  origin_SAUV.yaml  pid_value.yaml  sim_origin.yaml  sonar_ku.yaml
zeabus_controller/launch/: feedback_linearlization.launch  force_control.launch  not_have_dvl.launch  offset_control.launch  origin_control.launch
zeabus_controller/msg/: control_force.msg
zeabus_controller/src/: README.md  assign_close.cpp  emergency_control.cpp  manage_control.cpp  sim_controller.cpp
zeabus_controller/srv/: change_mode.srv  control_mode.srv  fix_abs_x.srv  fix_abs_xy.srv  fix_abs_y.srv  fix_abs_yaw.srv  fix_rel_depth.srv  fix_rel_xy.srv  message_service.srv
zeabus_extension/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml  setup.bash  setup.py
zeabus_extension/scripts/: __init__.py  control_auv.py  manage_log.py
zeabus_extension/src/: .convert_to_string.cpp.swp  .time.cpp.swp  convert_to_string.cpp  count_time.cpp  discrete_pid.cpp  find_error_position.cpp  generate_message.cpp  init.cpp  local_time.cpp  log_data.cpp  manage_port.cpp  pid_control.cpp  precise_time.cpp  ros.cpp  time.cpp  world_time.cpp
zeabus_extension/storage/: backup_CMakeLists.txt
zeabus_library/: CMakeLists.txt  package.xml
zeabus_library/msg/: IMUData.msg  IMUQuaternion.msg  Odometry.msg  Point4.msg  Pose.msg  PoseEuler.msg  State.msg  Twist.msg
zeabus_library/src/: ;  capture_time.cpp  convert_IMUData.cpp  convert_IMUQuaternion.cpp  convert_Point3.cpp  convert_Point4.cpp  convert_bytes.cpp  convert_inverse_rotation.cpp  convert_rotation.cpp  error_code.cpp  euler.cpp  file.cpp  general.cpp  linear_equation.cpp  listen_basic.cpp  listen_equation.cpp  matrix.cpp  quaternion_handle.cpp  quaternion_structure.cpp  ros.cpp  text_color.cpp  vector.cpp
zeabus_library/src_test/: base_quaternion.cpp  test_base_quaternion.cpp  test_color_text.cpp  test_quaternion_handle.cpp  test_ros_time.cpp  test_rotation_handle.cpp  test_tf_quaternion.cpp
zeabus_library/srv/: GetObject.srv  GetTwoPoint.srv  OneInt.srv  OneVector3Stamped.srv  README.md  StrPoint.srv  StrTwoPoint.srv  ThreeHydro.srv  ThreeOdometry.srv  TwoBool.srv  TwoPoint.srv  TwoStringVector3Stamped.srv  number_service.srv  one_point.srv
zeabus_localize/: CMakeLists.txt  package.xml
zeabus_localize/src/: localize_01.cpp  tf_localize_01.cpp
zeabus_log/: CMakeLists.txt  package.xml
zeabus_master/: CMakeLists.txt  package.xml
zeabus_master/src/: master_switch.cpp  switch_close.cpp  switch_open.cpp
zeabus_mission/: CMakeLists.txt  package.xml
zeabus_mission/scripts/: SAUVC_drum_side.py  SAUVC_gate_original.py  SAUVC_gate_qualification.py  SAUVC_mission_gate.py  SAUVC_pick_center.py  SAUVC_qualification_dvl.py  SAUVC_qualification_vision.py  control_auv.py  control_connection.py  drum_mission.py  last_gate.py  last_mission.py  mission_SAUVC.py  mission_all.py  mission_all_01.py  mission_all_02.py  mission_drum.py  mission_flare.py  mission_gate.py  mission_qualification.py  standard_mission.py  test_standard_mission.py  (+1 more)
zeabus_planner/: CMakeLists.txt  package.xml  setup.py
zeabus_sensor/: CMakeLists.txt  package.xml
zeabus_serial/: CMakeLists.txt  README.md  package.xml
zeabus_static/: CMakeLists.txt  package.xml
zeabus_teleop/: CMakeLists.txt  package.xml
(+962 files in other folders)
