<?xml version="1.0"?>
<package>
  <name>hg_ros_serial</name>
  <version>0.0.1</version>
  <description>Generic Boost ASIO driver of ROS</description>

  <maintainer email="mahisorn.w@hiveground.com">mahisorn</maintainer>
  <author>Mahisorn Wongphati</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <run_depend>roscpp</run_depend>
  
  <export>
  	<cpp cflags="-I${prefix}/include"/>
  </export>
</package>
