<?xml version="1.0"?>
<package format="2">
  <name>zeabus_control</name>
  <version>0.0.5</version>
  <description>The zeabus_control package</description>

  <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>zeabus_extension</build_depend>
  <exec_depend>zeabus_extension</exec_depend>

  <build_depend>zeabus_library</build_depend>
  <exec_depend>zeabus_library</exec_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
