<?xml version="1.0"?>
<package format="2">
  <name>zeabus_extension</name>
  <version>0.0.0</version>
  <description>The zeabus_extension package</description>

  <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>

  <build_export_depend>zeabus_extention</build_export_depend>

</package>
