<?xml version="1.0"?>
<package format="2">
  <name>zeabus_log</name>
  <version>0.0.0</version>
  <description>The zeabus_log package</description>

  <maintainer email="zeabus@todo.todo">zeabus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
