<?xml version="1.0"?>
<package format="2">
  <name>zeabus_master</name>
  <version>0.0.0</version>
  <description>The zeabus_master package</description>

  <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>zeabus_library</build_depend>
  <build_export_depend>zeabus_library</build_export_depend>
  <exec_depend>zeabus_library</exec_depend>

</package>
