<?xml version="1.0"?>
<package format="2">
  <name>zeabus_mission</name>
  <version>0.0.0</version>
  <description>The zeabus_mission package</description>

  <maintainer email="zeabus@todo.todo">zeabus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>zeabus_library</build_depend>
  <build_export_depend>zeabus_library</build_export_depend>

</package>
