<?xml version="1.0"?>
<package format="2">
  <name>zeabus_planner</name>
  <version>0.0.0</version>
  <description>The zeabus_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zeabus@todo.todo">zeabus</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>

  <build_depend>zeabus_control</build_depend>
  <build_export_depend>zeabus_control</build_export_depend>

  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
